--- a/src/Home.css
+++ b/src/Home.css
@@ -1,6 +1,8 @@
 .how-section1{
     margin-top:-15%;
     padding: 10%;
+    margin-right: 10%;
+    margin- left: 10%; 
 }
 .how-section1 h4{
     color: #ffa500;
